@@ -145,5 +145,6 @@ HORAS TRABALHADAS: 3h
 ==========
 
 - Correcao de bug com enter keypress / form submit
+- Ajustes na escolha de feeds durante o cadastro de um novo feed no dashboard
 
-HORAS TRABALHADAS: 2h
+HORAS TRABALHADAS: 3h
